--- a/src/assets/css/_index.scss
+++ b/src/assets/css/_index.scss
@@ -34,6 +34,6 @@ $colorSwisspassDarken: #af1602;
 $colorSwisspassBrighten: #d31c1e;
 
 @import "./basic";
-@import "./cards";
 @import "./map";
+@import "./footer";
 
