--- a/src/assets/css/footer.scss
+++ b/src/assets/css/footer.scss
@@ -1,46 +1,176 @@
+//FOOTER
 .footer {
-  border: 1px solid #3f3f3f;
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   height: 200px;
-  background: linear-gradient(0deg, rgb(19, 0, 36) 0%, rgb(47, 0, 51) 100%);
   box-shadow: 0 0 50px rgba(0, 0, 0, 1);
+  padding: 3em;
+  padding-left: 450px;
+  background-image: url("../img/map/old-map_sw.jpg");
+  background-size: 150%;
 
-  &._acive {
 
+  &:before {
+    content: "";
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0.8;
+    position: absolute;
+    background: linear-gradient(0deg, rgb(0, 7, 10) 0%, rgb(30, 49, 68) 100%);
   }
 
-  .footer-meta {
-    padding-left: 450px;
+  .line-1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    border-top: 6px solid #62a7c2;
   }
 
-  .meccg-card-image {
-    background-size: contain;
-    border-radius: 6%;
-    width: 400px;
-    background-color: grey;
+  .line-2 {
+    position: absolute;
+    top: 6px;
+    left: 0;
+    right: 0;
+    border-top: 5px solid #151515;
+  }
+
+  .footer-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+
+    .middle-content {
+      text-align: left;
+      flex-grow: 1;
+      height: 100%;
+      padding: 20px;
+    }
+
+    .card-items {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      flex-wrap: wrap;
+      font-size: 4px;
+      align-items: flex-start;
+      align-content: flex-start;
+      gap: 0 4em;
+
+      &._journey {
+        position: absolute;
+
+      }
+    }
+
+    .option-buttons {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    .meccg-card-image {
+      position: relative;
+      border-radius: 6%;
+      width: 400px;
+      background-color: grey;
+      background-size: cover;
+      display: inline-block;
+      flex-shrink: 0;
+      margin: 20px;
+      cursor: pointer;
+      transition: all 0.2s;
+
+      &:hover {
+        border: 4px solid white;
+      }
+
+      @extend .fade-in;
+      box-shadow: 0 0 50px rgb(0, 0, 0);
+      border: 1px solid #3f3f3f;
+
+      &._queer {
+        transform: rotate(-90deg);
+        width: 280px;
+        left: 60px !important;
+        bottom: -60px !important;
+        margin-right: 140px;
+      }
+
+      &._left {
+        //left: 20px;
+        //bottom: 10px;
+      }
+
+      &._right {
+        //right: 20px;
+        //bottom: 10px;
+      }
+
+      .meccg-card-inner {
+        width: 100%;
+        padding-bottom: 135%;
+      }
+    }
+  }
+
+  .epic-button {
     display: inline-block;
-    flex-shrink: 1;
-    position: fixed;
-    left: 20px;
-    bottom: 10px;
-    @extend .fade-in;
-    box-shadow: 0 0 50px rgb(0, 0, 0);
-    border: 1px solid #3f3f3f;
+    position: relative;
+    background-image: url("../img/map/old-map_sw.jpg");
+    background-size: 500%;
+    font-size: 18px;
+    border-radius: 0.5em;
+    overflow: hidden;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 1);
+    border: 2px solid #e7d9ba;
+    height: 70px;
+    width: 300px;
+    cursor: pointer;
 
-    &._queer {
-      transform: rotate(-90deg);
-      width: 280px;
-      left: 70px;
-      bottom: 0;
+
+    &:hover {
+      .button-text {
+        color: white;
+      }
     }
 
-    .meccg-card-inner {
-      width: 100%;
-      padding-bottom: 140%;
+    .button-color {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      opacity: 0.85;
+      background: linear-gradient(0deg, rgb(250, 211, 170) 0%, rgb(222, 197, 176) 100%);
+    }
+
+    .button-text {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      color: #381d1d;
+      font-weight: 800;
+      border-radius: 0.5em;
+      font-family: "Alice", serif;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-transform: uppercase;
     }
   }
-
 }
