--- a/src/assets/css/map.scss
+++ b/src/assets/css/map.scss
@@ -63,114 +63,6 @@ $colorBeige: #deb56f;
     height: 100%;
     width: 100%;
     padding: 5px;
-
-    button.site-button {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      pointer-events: auto;
-      height: 100%;
-      width: auto;
-      border: 10px solid transparent;
-      transition: all 0.2s;
-      border-radius: 20px;
-
-      &:hover {
-        border: 10px solid white;
-      }
-
-      .pergament {
-        background-image: url("../img/pic/pergament.png");
-        padding: 0 80px 0 50px;
-        display: flex;
-        align-items: center;
-        background-size: 100% 100%;
-        height: 100px;
-
-        .icon {
-          display: inline-block;
-          width: 100px;
-          height: 100px;
-          margin-right: 10px;
-        }
-
-        .title {
-          display: inline-block;
-          font-size: 50px;
-          font-family: "Alice", serif;
-          font-weight: 800;
-          color: $colorBlackish;
-          white-space: nowrap;
-        }
-      }
-
-      .creature-icon {
-        z-index: 100;
-        position: absolute;
-        top: 75px;
-        right: 50px;
-        width: 70px;
-        height: 70px;
-        background-color: $colorBeige;
-        border-radius: 50%;
-        border: 3px solid $colorBlackish;
-      }
-
-      .meta-container {
-        display: inline-block;
-        margin: auto;
-        z-index: -500;
-        position: relative;
-        top: -70px;
-        width: 100%;
-        padding: 0 80px;
-        text-align: center;
-
-        .meta {
-          width: auto;
-          border-radius: 30px;
-          background-color: #2a0a0a;
-          height: 80px;
-          display: inline-flex;
-          align-items: flex-end;
-          justify-content: center;
-          gap: 20px;
-          padding: 0 30px;
-
-          .playable {
-            top: 10px;
-            position: relative;
-            display: inline-block;
-            width: 35px;
-            height: 35px;
-            border-radius: 8px;
-            transform: rotate(45deg);
-            border: 4px solid black;
-            &._minor {
-              background-color: #54c750;
-            }
-            &._major {
-              background-color: #ff9100;
-            }
-            &._greater {
-              background-color: #dd00ff;
-            }
-            &._gold_ring {
-              background-color: #a88c6a;
-            }
-            &._information {
-              background-color: #5e5ed5;
-            }
-            &._palantiri {
-              background-color: #7c3fd7;
-            }
-            &._scrol_of_isildur {
-              background-color: #9d9585;
-            }
-          }
-        }
-      }
-    }
   }
 }
 
@@ -181,11 +73,26 @@ $colorBeige: #deb56f;
 .meccg-regions {
   overflow: hidden;
 
-  path {
+  .region-path {
+    opacity: 1;
     transition: stroke 0.2s;
+    fill: transparent;
 
     &:hover {
-      stroke: white;
     }
+  }
+}
+
+.root:not(.journey-mode) .meccg-regions .region-path:hover {
+  stroke: white;
+}
+
+.region-path[aria-label="1"] {
+  fill: rgba(141, 141, 141, 0.8);
+}
+
+.journey-mode {
+  .mountain-svg {
+    fill: rgba(141, 141, 141, 0.8);
   }
 }
