--- a/src/assets/css/card-item.scss
+++ b/src/assets/css/card-item.scss
@@ -13,29 +13,45 @@ button.site-button {
     border: 1em solid white;
   }
 
-  .pergament {
-    z-index: 50;
-    background-image: url("../img/pic/pergament.png");
-    padding: 0 7em 0 4em;
-    display: flex;
-    align-items: center;
-    background-size: 100% 100%;
-    height: 8em;
+  .pergament-container {
+    position: relative;
 
-    .icon {
-      display: inline-block;
-      width: 8em;
-      height: 8em;
-      margin-right: 0.5em;
+    .pergament-shadow {
+      z-index: -100;
+      position: absolute;
+      top: 1em;
+      right: 1.5em;
+      bottom: 1em;
+      left: 1.2em;
+      background-color: black;
+      box-shadow: 10px -10px 40px rgba(0, 0, 0, 1);
     }
 
-    .title {
-      display: inline-block;
-      font-size: 4em;
-      font-family: "Alice", serif;
-      font-weight: 800;
-      color: $colorBlackish;
-      white-space: nowrap;
+    .pergament {
+      position: relative;
+      z-index: 50;
+      background-image: url("../img/pic/pergament.png");
+      padding: 0 7em 0 4em;
+      display: flex;
+      align-items: center;
+      background-size: 100% 100%;
+      height: 8em;
+
+      .icon {
+        display: inline-block;
+        width: 8em;
+        height: 8em;
+        margin-right: 0.5em;
+      }
+
+      .title {
+        display: inline-block;
+        font-size: 4em;
+        font-family: "Alice", serif;
+        font-weight: 800;
+        color: #333333;
+        white-space: nowrap;
+      }
     }
   }
 
