--- a/src/assets/css/map.scss
+++ b/src/assets/css/map.scss
@@ -3,12 +3,40 @@ $colorBeige: #deb56f;
 
 @import url('https://fonts.googleapis.com/css2?family=Alice&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
+.meccg-border {
+  box-shadow:
+  0 0 0 2px rgba(164, 74, 151, 0.49),
+  0 0 0 20px black,
+  0 0 100px 0 rgb(33, 0, 0);
+  border-radius: 0.5px;
+}
+
 .leaflet-map {
   position: fixed;
-  top: 0;
+  top: $headerHeight;
   right: 0;
-  bottom: 0;
+  bottom: $footerHeight;
+  height: auto;
+  width: auto;
   left: 0;
+  background-image: url("../img/map/wood.jpg");
+  background-size: cover;
+  background-position: center;
+
+  .leaflet-bottom{
+    display: none;
+  }
+
+  &:before {
+    content: "";
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0.9;
+    position: absolute;
+    background: linear-gradient(0deg, rgb(10, 3, 0) 0%, rgb(24, 7, 0) 100%);
+  }
 }
 
 .region-object {
@@ -63,6 +91,9 @@ $colorBeige: #deb56f;
     height: 100%;
     width: 100%;
     padding: 5px;
+    position: relative;
+    top: 20px;
+    left: 20px;
   }
 }
 
@@ -87,12 +118,28 @@ $colorBeige: #deb56f;
   stroke: white;
 }
 
+
+.region-path, .mountain-svg {
+  transition: all 0.2s;
+}
+
 .region-path[aria-label="1"] {
-  fill: rgba(141, 141, 141, 0.8);
+  fill: rgba(141, 141, 141, 0.9);
+  //stroke: none!important;
+}
+
+.region-path[aria-description="1"] {
+  stroke: #ffffff !important;
+  //stroke-width: 10px!important;
+}
+
+body .site-object[aria-description="1"] .site-button {
+  background-color: white;
+  border: 20px solid white;
 }
 
 .journey-mode {
   .mountain-svg {
-    fill: rgba(141, 141, 141, 0.8);
+    fill: rgba(141, 141, 141, 0.9);
   }
 }
