--- a/src/assets/css/_index.scss
+++ b/src/assets/css/_index.scss
@@ -10,7 +10,7 @@ $colorLiberoGrey1: #D2D6DB;
 $colorLiberoGrey2: #919AA7;
 $colorLiberoGrey2-3: #6C737F;
 $colorLiberoGrey3: #384250;
-$colorBlackish: rgba(46, 52, 60, 0.53);
+$colorBlackish: rgb(38, 38, 38);
 $colorBackground: #F3F4F6;
 $responsiveWidthMobileMax: 1000px;
 $responsiveWidthMobileMin: 1001px;
@@ -34,12 +34,13 @@ $colorSwisspassBrighten: #d31c1e;
 
 $colorCian: #399dbb;
 
-$headerHeight: 40px;
+$headerHeight: 30px;
 $footerHeight: 200px;
 
 
 @import "./basic";
 @import "./map";
+@import "./modal";
 @import "./card-item";
 @import "./header&footer";
 
