--- a/src/assets/css/header&footer.scss
+++ b/src/assets/css/header&footer.scss
@@ -6,9 +6,11 @@
   right: 0;
   height: $headerHeight;
   box-shadow: 0 0 50px rgba(0, 0, 0, 1);
-  padding-left: 450px;
   background-image: url("../img/map/old-map_sw.jpg");
   background-size: 150%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &:before {
     content: "";
@@ -38,38 +40,79 @@
   }
 
   .header-content {
-    z-index: 5;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    color: white;
+    position: relative;
+    top: 30px;
+    width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    top: 30px;
+    transform: rotate(180deg);
+    background-image: url("../img/map/old-map_sw.jpg");
+    background-size: 150%;
+    padding: 10px 20px;
+    box-shadow: 0 0 0 2px $colorBlackish,
+    0 0 0 5px $colorCian,
+    0 0 0 9px $colorBlackish,
+    4px 4px 9px 5px rgba(0, 0, 0, 0.2);
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    overflow: hidden;
 
-    .journey-region {
-      .journey-region-icon {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        border: 3px solid white;
-        box-shadow: 0 0 50px rgba(0, 0, 0, 1);
-      }
+    &:before {
+      content: "";
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      opacity: 0.8;
+      position: absolute;
+      background: linear-gradient(0deg, rgb(0, 7, 10) 0%, rgb(30, 49, 68) 100%);
     }
-
-    .journey-site {
-      .journey-site-icon {
-        width: 60px;
-        height: 60px;
-      }
-    }
-
   }
 }
 
+
+.route {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
+
+  .journey-region {
+    .journey-region-icon {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      border: 3px solid white;
+      box-shadow: 0 0 50px rgba(0, 0, 0, 1);
+    }
+  }
+
+  .journey-site {
+    .journey-site-icon {
+      width: 60px;
+      height: 60px;
+    }
+
+  }
+
+  .journey-hazard {
+    button.journey-hazard-icon {
+      width: 65px;
+      height: 65px;
+      background-image: url("../img/region/playableHazard.svg");
+      transition: all 0.2s;
+      border-radius: 10px;
+      border: 2px solid transparent;
+
+      &:hover {
+        border: 2px solid white;
+      }
+    }
+  }
+}
 
 //FOOTER
 .footer {
@@ -121,61 +164,142 @@
     justify-content: space-between;
     align-items: flex-end;
 
-    .middle-content {
-      text-align: left;
-      flex-grow: 1;
-      height: 100%;
-      padding: 20px;
-      flex-shrink: 1;
+    .footer-route-containter {
+      position: absolute;
+      bottom: 170px;
+      left: 50%;
+      width: auto;
       display: flex;
-      flex-wrap: wrap;
-      gap: 1em;
       justify-content: center;
-    }
+      align-items: center;
+      transform: translate(-50%);
+      background-image: url("../img/map/old-map_sw.jpg");
+      background-size: 150%;
+      padding: 10px 20px;
+      box-shadow: 0 0 0 2px $colorBlackish,
+      0 0 0 5px $colorCian,
+      0 0 0 9px $colorBlackish,
+      4px 4px 9px 5px rgba(0, 0, 0, 0.2);
+      border-radius: 10px;
+      overflow: hidden;
+      max-width: 30vw;
 
-    .card-items {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      flex-wrap: wrap;
-      font-size: 4px;
-      align-items: flex-start;
-      align-content: flex-start;
-      gap: 0 4em;
-
-      &._journey {
+      &:before {
+        content: "";
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        opacity: 0.8;
         position: absolute;
+        background: linear-gradient(0deg, rgb(0, 7, 10) 0%, rgb(30, 49, 68) 100%);
       }
     }
 
-    .option-buttons {
+    .middle-content {
+      flex-grow: 1;
+      flex-shrink: 1;
+      height: 100%;
+      padding: 20px;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 30px;
+      gap: 10px;
+      max-width: 30vw;
+
+      .buttons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+
+        .epic-button {
+          width: 300px;
+          max-width: 15vw;
+          display: inline-block;
+          position: relative;
+          background-image: url("../img/map/old-map_sw.jpg");
+          background-size: 500%;
+          font-size: 15px;
+          border-radius: 0.5em;
+          overflow: hidden;
+          box-shadow: 0 0 50px rgba(0, 0, 0, 1);
+          border: 2px solid #e7d9ba;
+          height: 70px;
+          cursor: pointer;
+          flex-shrink: 1;
+
+          &:before {
+            content: "";
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            opacity: 0.85;
+            background: linear-gradient(0deg, rgb(250, 211, 170) 0%, rgb(222, 197, 176) 100%);
+          }
+
+          &:hover {
+            .button-text {
+              color: white;
+            }
+          }
+
+          .button-text {
+            position: relative;
+            color: #381d1d;
+            font-weight: 800;
+            border-radius: 0.5em;
+            font-family: "Alice", serif;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-transform: uppercase;
+          }
+        }
+      }
+
+      .card-items {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        font-size: 4px;
+        align-items: flex-start;
+        align-content: flex-start;
+        gap: 0 4em;
+
+        &._journey {
+          position: absolute;
+        }
+      }
     }
 
     .placeholder {
       width: 400px;
-      flex-shrink: 1;
       margin: 20px;
+      max-width: 30vw;
     }
 
     .meccg-card-image {
       position: relative;
       border-radius: 6%;
       width: 400px;
+      max-width: 30vw;
       background-color: grey;
       background-size: cover;
       display: inline-block;
       margin: 20px;
       cursor: pointer;
       transition: all 0.2s;
-      flex-shrink: 1;
+      flex-shrink: 0;
 
       &:hover {
-        border: 4px solid white;
+        border: 1px solid white;
       }
 
       @extend .fade-in;
@@ -194,57 +318,6 @@
         width: 100%;
         padding-bottom: 135%;
       }
-    }
-  }
-
-  .epic-button {
-    display: inline-block;
-    position: relative;
-    background-image: url("../img/map/old-map_sw.jpg");
-    background-size: 500%;
-    font-size: 18px;
-    border-radius: 0.5em;
-    overflow: hidden;
-    box-shadow: 0 0 50px rgba(0, 0, 0, 1);
-    border: 2px solid #e7d9ba;
-    height: 70px;
-    width: 20em;
-    cursor: pointer;
-    flex-shrink: 1;
-    max-width: 20vw;
-
-
-    &:hover {
-      .button-text {
-        color: white;
-      }
-    }
-
-    .button-color {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      opacity: 0.85;
-      background: linear-gradient(0deg, rgb(250, 211, 170) 0%, rgb(222, 197, 176) 100%);
-    }
-
-    .button-text {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      color: #381d1d;
-      font-weight: 800;
-      border-radius: 0.5em;
-      font-family: "Alice", serif;
-      text-align: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-transform: uppercase;
     }
   }
 }
