--- a/src/assets/css/modal.scss
+++ b/src/assets/css/modal.scss
@@ -134,8 +134,108 @@
       gap: 10px 10px;
       background-color: transparent;
 
-      .meccg-card-image{
+      .meccg-card-image {
         width: 300px;
+      }
+    }
+  }
+}
+
+.main-menu-modal {
+  position: relative;
+  width: 80vw;
+  height: 80vh;
+  max-width: 2000px;
+  max-height: 2000px;
+  box-shadow: 0 0 0 2px $colorBlackish,
+  0 0 0 5px $colorCian,
+  0 0 0 9px $colorBlackish,
+  4px 4px 9px 5px rgba(0, 0, 0, 0.2);
+  background-image: url("../img/map/old-map_sw.jpg");
+  background-size: cover;
+  border-radius: 0.2em;
+  display: flex;
+  flex-direction: column;
+  padding: 5%;
+  color: white;
+  font-size: 20px;
+
+
+  &:before {
+    content: "";
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0.8;
+    position: absolute;
+    background: linear-gradient(0deg, rgb(0, 7, 10) 0%, rgb(30, 49, 68) 100%);
+  }
+
+  .menu-title {
+    position: relative;
+    margin-bottom: 1em;
+    padding-bottom: 1em;
+    border-bottom: 1px solid white;
+  }
+}
+
+.select-items {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
+
+
+  .select-item {
+    position: relative;
+    text-transform: uppercase;
+    color: white;
+    cursor: pointer;
+    align-items: center;
+    gap: 1em;
+    margin-bottom: 20px;
+    display: inline-flex;
+    padding: 0.2em 0;
+    @media (hover: hover) {
+      &:hover {
+        .indicator {
+          box-shadow: 0 0 0 2px $colorBlackish,
+          0 0 0 5px white,
+          0 0 0 9px $colorBlackish,
+        }
+      }
+    }
+
+    &._selected {
+      .indicator {
+        div {
+          opacity: 1;
+        }
+      }
+    }
+
+    .indicator {
+      width: 1em;
+      height: 1em;
+      border-radius: 50%;
+      box-shadow: 0 0 0 2px $colorBlackish,
+      0 0 0 5px $colorCian,
+      0 0 0 9px $colorBlackish,
+      4px 4px 9px 5px rgba(0, 0, 0, 0.2);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: all 0.2s;
+
+      div {
+        width: 0.3em;
+        height: 0.3em;
+        background-color: $colorCian;
+        border-radius: 50%;
+        box-shadow: 0 0 0 5px $colorCian,
+        0 0 0 9px $colorBlackish;
+        opacity: 0;
+        transition: all 0.2s;
       }
     }
   }
