--- a/src/assets/css/header&footer.scss
+++ b/src/assets/css/header&footer.scss
@@ -329,8 +329,8 @@
         align-content: flex-start;
         gap: 0 4em;
 
-        &._journey {
-          position: absolute;
+        &._region-sites {
+          font-size: 4px;
         }
       }
     }
